RESOLVED FIXED102173
createDelay should raise exception when the maxDelayTime parameter is incorrect.
https://bugs.webkit.org/show_bug.cgi?id=102173
Summary createDelay should raise exception when the maxDelayTime parameter is incorrect.
Li Yin
Reported 2012-11-13 20:54:35 PST
Spec: https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html The maxDelayTime parameter is optional and specifies the maximum delay time in seconds allowed for the delay line. If specified, this value must be greater than zero and less than three minutes or a NOT_SUPPORTED_ERR exception will be thrown. Webaudio spec is changed, we should fix this issue in WebKit.
Attachments
Patch (10.34 KB, patch)
2012-11-14 05:42 PST, Li Yin
no flags
Patch (10.34 KB, patch)
2012-11-14 05:54 PST, Li Yin
no flags
Li Yin
Comment 1 2012-11-14 05:42:07 PST
WebKit Review Bot
Comment 2 2012-11-14 05:44:54 PST
Attachment 174137 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/weba..." exit_code: 1 Source/WebCore/Modules/webaudio/DelayNode.h:47: The parameter name "ec" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Li Yin
Comment 3 2012-11-14 05:54:23 PST
Chris Rogers
Comment 4 2012-11-14 12:00:44 PST
Comment on attachment 174140 [details] Patch Thanks Li!
WebKit Review Bot
Comment 5 2012-11-14 12:14:41 PST
Comment on attachment 174140 [details] Patch Clearing flags on attachment: 174140 Committed r134644: <http://trac.webkit.org/changeset/134644>
WebKit Review Bot
Comment 6 2012-11-14 12:14:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.