createDelay should raise exception when the maxDelayTime parameter is incorrect. https://bugs.webkit.org/show_bug.cgi?id=102173

Patch by Li Yin <li.yin@intel.com> on 2012-11-14
Reviewed by Chris Rogers.

Spec: https://dvcs.w3.org/hg/audio/raw-file/tip/webaudio/specification.html
The specified value must be greater than zero and less than three minutes or a
NOT_SUPPORTED_ERR exception will be thrown.

Source/WebCore:

Tests: webaudio/delaynode-maxdelaylimit.html

* Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::createDelay):
* Modules/webaudio/AudioContext.h:
(AudioContext):
* Modules/webaudio/AudioContext.idl: Add raising exception for createDelay.
* Modules/webaudio/DelayNode.cpp:
(WebCore):
(WebCore::DelayNode::DelayNode):
* Modules/webaudio/DelayNode.h:
(WebCore::DelayNode::create):
(DelayNode):

LayoutTests:

* webaudio/delaynode-maxdelaylimit-expected.txt:
* webaudio/delaynode-maxdelaylimit.html:

Canonical link: https://commits.webkit.org/120369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134644 268f45cc-cd09-0410-ab3c-d52691b4dbfc